<resources>
    <string name="app_name">BleLineChartFrg</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_bluetooth">Open Bluetooth</string>
    <string name="Connect">Connect</string>
    <string name="StartTest">Start</string>
    <string name="encourage">you can do it</string>
    <string name="test">test</string>
    <string name="file">file</string>
    <string name="information">information</string>
    <string name="checkbox">checkBox</string>
    <string name="ScanReult">ScanReult</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="check_scan_device">choose_scan_device</string>
    <string name="choose_scan_device">choose_scan_device</string>
    <string name="textview">readText</string>
    <string name="input_parameter">input</string>
    <string name="bluetooth_has_opened">has_opened</string>
    <string name="connected">connected</string>
    <string name="disconnected">disconnected</string>
    <string name="saveFile">saveFile</string>
    <string name="vds">Vds</string>
    <string name="textview1">value1</string>
    <string name="textview2">value2</string>
    <string name="textview3">value3</string>
    <string name="vg">Vg</string>
    <string name="setvds">setVds</string>
    <string name="setvg">setVg</string>
</resources>