<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.blelinechartfrg.FirstFragment"
        android:label="@string/test"
        tools:layout="@layout/first_fragment" />
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.blelinechartfrg.SecondFragment"
        android:label="@string/file"
        tools:layout="@layout/second_fragment" />
    <fragment
        android:id="@+id/ThirdFragment"
        android:name="com.example.blelinechartfrg.ThirdFragment"
        android:label="@string/information"
        tools:layout="@layout/third_fragment" />
</navigation>